trying to fix spacing

--- a/css/index-styles.css
+++ b/css/index-styles.css
@@ -4,6 +4,10 @@ body {
     background-color: #eceff1;
 }
 
+.nav-file {
+    margin-top: -5%;
+}
+
 /*      
         **Do all the media queries here**
         I couldn't figure out why the media queries aren't working for the individual 
